# cmake_scipy_ctypes_example

./: LICENSE  README.md  py_crust_example.py  template_project.doxy
gdb-plot/: v1.mat
gdb-plot/examples/: boost_example  eigen_example  raw_pointers_example  stl_example
src/: CMakeLists.txt
src/ctypes_interface/: CMakeLists.txt  sample_interface.cpp  sample_interface.h
src/lcm_zmq_integration/: build_zmq_lcm.sh  create-lcm.sh  xclient.py  xserver.py  zmq_lcm_pub.cpp  zmq_lcm_sub.cpp
src/lcm_zmq_integration/example_lcm/: image_t.hpp
src/lcm_zmq_integration/lcmtypes/: image_t.lcm
src/lcm_zmq_integration/python/example_lcm/: __init__.py  image_t.py
src/nn/: nn.py  rnn.py
src/python/: ExampleNotebook.ipynb  FastImshow.py  custom_dialogs.py  plotting_tools.py  plotting_tools_gtk.py  plotting_tools_wx.py  plotting_utils.py  py_audio_gui.py  py_ctypes_caller.py  pyqtgraph_slice_plotter.py  qt_utils.py  simple_scatter.py  slice_plotter.py
src/sample_class/: CMakeLists.txt  sample.cpp  sample.h
